--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ html, body{
 }
 .calculator_heading, .input{
   grid-column: span 4;
-  text-align: center;
+  text-align: left;
 }
 .calculator_heading{
   font-size: 42px;
@@ -37,6 +37,7 @@ html, body{
 }
 .input .input_field{
   width: 100%;
+  height: 65px;
   padding: 22px 0px 22px 0px;
   border: 1px solid black;
   border-radius: 10px;
