--- a/style.css
+++ b/style.css
@@ -23,21 +23,32 @@ html, body{
   border-radius: 12px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(8, 1fr);
+  grid-template-rows: repeat(9, 56px);
   gap: 10px;
   padding: 10px;
+}
+.messageDiv{
+  grid-column: span 4;
+  height: 40px;
+  line-height: 40px;
+  text-align: left;
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 7px;
+  padding-left: 5px;
+  align-self: end;
 }
 .calculator_heading, .input{
   grid-column: span 4;
   text-align: left;
 }
 .calculator_heading{
-  font-size: 42px;
+  font-size: 40px;
   margin: auto;
 }
 .input .input_field{
   width: 100%;
-  height: 65px;
+  height: 59px;
   padding: 22px 0px 22px 0px;
   border: 1px solid black;
   border-radius: 10px;
